      values.  [Feature #16035]

Regexp::

  Modified method::

    * Regexp#match and Regexp#match? with a +nil+ argument are deprecated
      and will raise a TypeError in the next release.  [Feature #13083]

RubyVM::

  Removed method::

    * +RubyVM.resolve_feature_path+ moved to
      <code>$LOAD_PATH.resolve_feature_path</code>.  [Feature #15903] [Feature #15230]

String::

  Unicode::

    * Update Unicode version and Emoji version from 11.0.0 to
      12.0.0.  [Feature #15321]

    * Update Unicode version to 12.1.0, adding support for
      U+32FF SQUARE ERA NAME REIWA.  [Feature #15195]

    * Update Unicode Emoji version to 12.1 [Feature #16272]

Time::

  New methods::

    * Added Time#ceil method.  [Feature #15772]

    * Added Time#floor method.  [Feature #15653]

  Modified method::

    * Time#inspect is separated from Time#to_s and it shows its sub
      second.  [Feature #15958]

UnboundMethod::

  New method::

    * Added UnboundMethod#bind_call method.  [Feature #15955]

      <code>umethod.bind_call(obj, ...)</code> is semantically equivalent
      to <code>umethod.bind(obj).call(...)</code>.  This idiom is used in
      some libraries to call a method that is overridden.  The added
      method does the same without allocation of intermediate Method
      object.

          class Foo
            def add_1(x)
              x + 1
            end
          end
          class Bar < Foo
            def add_1(x) # override
              x + 2
            end
          end

          obj = Bar.new
          p obj.add_1(1) #=> 3
          p Foo.instance_method(:add_1).bind(obj).call(1) #=> 2
          p Foo.instance_method(:add_1).bind_call(obj, 1) #=> 2


$LOAD_PATH::

  New method::

    * Added <code>$LOAD_PATH.resolve_feature_path</code>.  [Feature #15903] [Feature #15230]

=== Stdlib updates (outstanding ones only)

Bundler::

  * Upgrade to Bundler 2.1.0.pre.3